[gd_scene load_steps=23 format=2]

[ext_resource path="res://projectiles/ProjectileController.gd" type="Script" id=1]
[ext_resource path="res://CollisionHandler.gd" type="Script" id=2]
[ext_resource path="res://projectiles/ProjectileActionAnimationManager.gd" type="Script" id=3]
[ext_resource path="res://SpriteAnimationManager.gd" type="Script" id=4]
[ext_resource path="res://SpriteAnimation.gd" type="Script" id=5]
[ext_resource path="res://PushableMovementAnimationManager.gd" type="Script" id=6]
[ext_resource path="res://movementAnimation.gd" type="Script" id=7]
[ext_resource path="res://basicMovement.gd" type="Script" id=8]
[ext_resource path="res://music/DirectorySoundPlayer.gd" type="Script" id=9]
[ext_resource path="res://music/heroSoundPlayer.gd" type="Script" id=10]
[ext_resource path="res://active-collision-areas.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/fighters/fighter1/animations/projectile/active/0.png" type="Texture" id=12]
[ext_resource path="res://fighters/Sprite.gd" type="Script" id=13]
[ext_resource path="res://fighters/attacksfx.gd" type="Script" id=14]
[ext_resource path="res://assets/particles/attack-sfx/melee-particle.png" type="Texture" id=15]
[ext_resource path="res://assets/particles/attack-sfx/special-particle.png" type="Texture" id=16]
[ext_resource path="res://assets/particles/attack-sfx/tool-particle.png" type="Texture" id=17]
[ext_resource path="res://input_manager.gd" type="Script" id=18]
[ext_resource path="res://assets/lighting/1x1-white.png" type="Texture" id=19]
[ext_resource path="res://sfxSprites.gd" type="Script" id=20]
[ext_resource path="res://bodyBox.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=1]

[node name="abstract_projectile" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="ProjectileController" type="Node" parent="."]

[node name="CollisionHandler" type="Node" parent="ProjectileController"]
script = ExtResource( 2 )

[node name="ActionAnimationManager" type="Node" parent="ProjectileController"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="SpriteAnimationManager" type="Node" parent="ProjectileController/ActionAnimationManager"]
editor/display_folded = true
script = ExtResource( 4 )
maxShakeDistance = 1.0

[node name="SpriteAnimations" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager"]

[node name="start-up" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations"]
script = ExtResource( 5 )
barCancelableble = false
canBeBarCanceledInto = false

[node name="active" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations"]
script = ExtResource( 5 )
abilityBarDrain = 1.0

[node name="completion" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations"]
script = ExtResource( 5 )
barCancelableble = false
canBeBarCanceledInto = false

[node name="MovementAnimationManager" type="Node" parent="ProjectileController/ActionAnimationManager"]
script = ExtResource( 6 )
landingPushAwaySpeed = Vector2( 400, 30 )

[node name="MovementAnimations" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager"]
editor/display_folded = true

[node name="start-up" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations"]
script = ExtResource( 7 )

[node name="active" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations"]
script = ExtResource( 7 )

[node name="completion" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations"]
script = ExtResource( 7 )

[node name="Gravity" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager"]
script = ExtResource( 8 )
acceleration = 700.0
maxSpeed = 2500.0
angle = 90.0

[node name="hittingSFX" type="Node" parent="ProjectileController"]
script = ExtResource( 9 )
soundDirectory = "res://music/sfx/hitting/"

[node name="commonSFXSounds" type="Node" parent="ProjectileController"]
script = ExtResource( 9 )
soundDirectory = "res://assets/sounds/sfx/common/"

[node name="heroSFXSounds" type="Node" parent="ProjectileController"]
script = ExtResource( 10 )

[node name="active-nodes" parent="." instance=ExtResource( 11 )]

[node name="Sprite" type="Sprite" parent="active-nodes"]
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="attackSFXs" type="Node2D" parent="active-nodes"]
script = ExtResource( 14 )
meleeParticle = ExtResource( 15 )
specialParticle = ExtResource( 16 )
toolParticle = ExtResource( 17 )

[node name="inputManager" type="Node" parent="active-nodes/attackSFXs"]
script = ExtResource( 18 )

[node name="melee-light" type="Light2D" parent="active-nodes"]
position = Vector2( 719, 431.5 )
texture = ExtResource( 19 )
texture_scale = 2.0
color = Color( 0, 0.0862745, 1, 0.0823529 )
energy = 3.5
mode = 3

[node name="tool-light" type="Light2D" parent="active-nodes"]
position = Vector2( 719, 431.5 )
texture = ExtResource( 19 )
texture_scale = 2.0
color = Color( 1, 0.0470588, 0, 0.0823529 )
energy = 3.0
mode = 3

[node name="special-light" type="Light2D" parent="active-nodes"]
position = Vector2( 719, 431.5 )
texture = ExtResource( 19 )
texture_scale = 2.0
color = Color( 0.752941, 0.639216, 0.0117647, 0.0823529 )
energy = 4.5
mode = 3

[node name="sfxSprites" type="Node2D" parent="active-nodes"]
script = ExtResource( 20 )

[node name="bodyBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = ExtResource( 21 )

[node name="floorDetector" type="RayCast2D" parent="bodyBox"]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="leftPlatformDetector" type="RayCast2D" parent="bodyBox"]
position = Vector2( -10, -11 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="leftOpponentDetector" type="RayCast2D" parent="bodyBox"]
position = Vector2( -10, 39 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="rightPlatformDetector" type="RayCast2D" parent="bodyBox"]
position = Vector2( 10, -11 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="rightOpponentDetector" type="RayCast2D" parent="bodyBox"]
position = Vector2( 10, 39 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="rightWallDetector" type="RayCast2D" parent="bodyBox"]
enabled = true
cast_to = Vector2( 15, 0 )

[node name="rightFalseWallDetector" type="RayCast2D" parent="bodyBox"]
enabled = true
cast_to = Vector2( 15, 0 )
collide_with_areas = true

[node name="leftWallDetector" type="RayCast2D" parent="bodyBox"]
enabled = true
cast_to = Vector2( -15, 0 )

[node name="leftFalseWallDetector" type="RayCast2D" parent="bodyBox"]
enabled = true
cast_to = Vector2( -15, 0 )
collide_with_areas = true

[node name="cachedResources" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
